modify overlaid caption positioning to prevent occasional slight gap

--- a/assets/sass/_conditional_large.scss
+++ b/assets/sass/_conditional_large.scss
@@ -14,7 +14,7 @@
     right: -1px;
     background: #000000;
     box-sizing: border-box;
-    width: 82vh;
+    width: 84vh;
     text-align: center;
     height: 1.2em;
     line-height: 1;
